--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-﻿################################################################################
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-
+.DS_Store
+main
+zshrc
 /.vs
 /x64/Debug
 /projektpi1/x64/Debug/flanki.tlog
