Update gitignore and fix mistake by me :)

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,24 @@ zshrc
 /projektpi1/sfml-window-3.dll
 /projektpi1/sfml-window-d-3.dll
 *.slnx
+
+
+.vs/
+Debug/
+Release/
+x64/
+x86/
+*.tlog
+*.obj
+*.log
+*.idb
+*.pdb
+*.ilk
+*.ipch
+*.aps
+*.opt
+*.suo
+*.user
+*.recipe
+*.exe
+*.dll
